# stric

./: .gitattributes  .gitignore  .graphify_ast.json  .graphify_cached.json  .graphify_incremental.json  .graphify_uncached.txt  Cargo.toml  README.md  stric-flow-architecture.md  stric-flow-idea.md  stric-flow-implementation.md  stric-flow-protocol-schemas.md
conductor/: keep_alive_system.md  stream_methods_and_core_workspace.md  stric-core-node-restructuring.md  stric-tower-plan.md  stric-tower-sandwich-plan.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
rfcs/: 2026-0001-symmetric-node-architecture.md  2026-0002-automated-heartbeat-keepalive.md  2026-0003-stric-tower-request-response.md  2026-0004-stric-tower-sandwich-model.md  2026-0005-stric-flow-spanning-tree-routing.md  2026-0006-stric-flow-wire-schema-specifications.md  2026-0007-stric-flow-engine-reconciliation.md  2026-0008-stric-flow-protocol-specification.md
src/: connection.rs  connection_wrapper.rs  handler_types.rs  lib.rs  server.rs  server_config.rs  stream.rs
stric/: Cargo.toml
stric-core/: Cargo.toml  README.md
stric-core/src/: connection.rs  connection_wrapper.rs  handler_types.rs  keep_alive.rs  lib.rs  node.rs  node_config.rs  server.rs  server_config.rs  stream.rs
stric-core/tests/: integration_test.rs
stric-flow/: Cargo.toml  README.md  build.rs
stric-flow/examples/: backpressure_throttle.rs  custom_flow_handler.rs  custom_routing_metric.rs  large_network_simulation.rs  large_network_simulation_graph.py  large_network_simulation_mesh.dot  large_network_simulation_mesh.mmd  large_network_simulation_structure.txt  message_serialization_registry.rs  multihop_forwarding.rs  node_discovery.rs  session_custom_merge.rs  session_lww_sync.rs  simple_connection.rs  subscription_delivery.rs
stric-flow/examples/common/: mod.rs
stric-flow/proto/: stric_flow.proto
stric-flow/src/: backpressure.rs  discovery.rs  error.rs  frame.rs  lib.rs  node.rs  proto.rs  reconciliation.rs  registry.rs  routing.rs
stric-tower/: Cargo.toml  README.md  build.rs
stric-tower/examples/: client.rs  middleware.rs  mixed_codec.rs  protobuf.rs  server.rs  tower_middleware.rs
stric-tower/proto/: stric_tower_wire.proto
stric-tower/src/: adapter.rs  client.rs  codec.rs  error.rs  handler.rs  http.rs  lib.rs  routing.rs  server.rs  wire.rs
stric-tower/tests/: integration_test.rs
stric/src/: lib.rs
tests/: integration_test.rs
