[package]
name = "stric-core"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
dashmap = "6.1.0"
prost = "0.14.3"
quinn = "0.11.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
