[package]
name = "stric-tower"
version = "0.1.0"
edition = "2024"

[dependencies]
stric-core = { path = "../stric-core" }
tower = "0.5.2"
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
async-trait = "0.1.88"
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
quinn = "0.11.9"
futures = "0.3.31"

[dev-dependencies]
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
tower = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.52.1", features = ["full", "macros", "test-util"] }
serde_json = "1.0"
