[package]
name = "stric-tower"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
stric-core = { path = "../stric-core" }
tower = { version = "0.5.2", features = ["util"] }
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
async-trait = "0.1.88"
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
quinn = "0.11.9"
futures = "0.3.31"
http = "1.0"
bytes = "1.11.1"
rcgen = "0.14.7"
http-body = "1.0.1"
http-body-util = "0.1.3"

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
rustls-pemfile = "2.2.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["full", "macros", "test-util"] }
rustls = "0.23.40"
